--- a/lesson1/stage1/pom.xml
+++ b/lesson1/stage1/pom.xml
@@ -95,6 +95,11 @@
 
   <build>
     <sourceDirectory>src/jvm</sourceDirectory>
+    <resources>
+      <resource>
+        <directory>src/jvm/udacity/storm</directory>
+      </resource>
+    </resources>
     <plugins>
       <!--
         Bind the maven-assembly-plugin to the package phase
